--- a/src/App.css
+++ b/src/App.css
@@ -198,12 +198,12 @@ img {
   /* max-width: calc(960px + 32px); */
   /* margin: 0 auto; */
   margin-left: auto;
-  padding: 88px 16px 100px;
+  padding: 32px 16px 100px;
 }
 
 @media screen and (max-width: 1000px) {
   .inner {
-    padding: 114px 16px 100px;
+    /* padding: 114px 16px 100px; */
     width: 100%;
   }
 }
