--- a/src/components/table/TableCompositions.scss
+++ b/src/components/table/TableCompositions.scss
@@ -337,12 +337,12 @@
   .type {
     margin: 0 auto;
     width: 22px;
-    // border-radius: 100%;
-    // background-color: #222;
+    border-radius: 100%;
+    background-color: #222;
     padding: 2px;
     img {
-      width: 22px;
-      height: 22px;
+      width: 18px;
+      height: 18px;
       object-fit: cover;
     }
   }
