영진 수정 - 모바일 알람 수정 완료

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -693,6 +693,10 @@
     height: 100%;
     // min-height: 400px;
     top: auto;
+    // &::after{
+    //   content:'';
+    //   width: 100%;
+    // }
   }
   .menu-box__lang-notification--select-notification-box{
     .menu-box__lang-notification--select-notification-box__item{
