영진 수정 - 모바일 알람 수정 완료

--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -1043,6 +1043,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: normal;
+            white-space:nowrap;
           }
         }
       }
