--- a/src/components/CustomTable.scss
+++ b/src/components/CustomTable.scss
@@ -37,7 +37,7 @@
             font-weight: 400;
             line-height: normal;
             white-space: nowrap;
-
+            white-space:nowrap;
             &:first-child {
             //   padding-left: 24px;
             }
