--- a/src/components/TransactionsModal.scss
+++ b/src/components/TransactionsModal.scss
@@ -43,6 +43,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: normal;
+            white-space:nowrap;
           }
         }
       }
