--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -396,6 +396,7 @@
                 transition: 0.3s;
                 height: 0;
                 opacity: 0;
+                z-index: 10;
                 li{
                   width: 100%;
                   display: flex;
