--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -30,7 +30,8 @@
     gap: 40px;
     justify-content: space-between;
     .footer__top__left{
-      flex: 1;
+      // flex: 1;
+      width: 300px;
       border-radius: 16px 4px 16px 16px;
       background: var(--Color-03, #222);
       padding: 16px;
@@ -40,6 +41,7 @@
       .footer__top__left__logo{
         max-width: 180px;
         width: 100%;
+        margin-left: -2px;
       }
       .footer__top__left__sns{
         display: flex;
@@ -49,6 +51,11 @@
         li{
           a{
             display: block;
+            img{
+              width: 26px;
+              height: 26px;
+              object-fit: contain;
+            }
           }
         }
       }//footer__top__left__sns--END--
@@ -144,14 +151,14 @@
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content:end;
         gap: 16px;
         height: 100%;
         padding-right: 20px;
         dl{
           display: flex;
           flex-direction: column;
-          gap: 16px;
+          gap: 8px;
           min-height: 140px;
           dt{
             color: var(--primary-300, #87AA00);
@@ -160,6 +167,7 @@
             font-style: normal;
             line-height: normal;
             text-transform: capitalize;
+            margin-top: 8px;
           }
           dd{
             a{
@@ -390,6 +398,18 @@
     .footer__top,.footer__bottom{
       flex-direction: column;
       height: auto;
+    }
+    .footer__top{
+      .footer__top__left{
+        width: 100%;
+        max-width: 300px;
+      }
+      .footer__top__right{
+        width: 100%;
+        .footer__top__right__menu{
+          justify-content: space-between;
+        }
+      }
     }
     .footer__bottom{
       height: 440px;
