--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -138,7 +138,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       word-break: break-word;
-      min-height: 34px;
+      height: 34px;
       width: 134px;
     } //album__content-list__list__item__right__title--END--
     .album__content-list__list__item__right__love-play {
