--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -101,10 +101,10 @@
       position: absolute;
       bottom: 16px;
       left: 16px;
-      padding: 4px 10px;
-
+      padding: 2px 8px;
       border-radius: 12px;
-      background: var(--Color-03, #222);
+      background-color: rgba(0, 0, 0, 0.7);
+      border: 1px solid rgba(255, 255, 255, 0.5);
       box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.15);
       display: flex;
       align-items: center;
