영진 수정 - main pull

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -674,6 +674,7 @@
       // width: calc(100% + 31px);
       width: 100%;
       overflow: auto;
+      max-height: calc(100vh - 158px);
     }
     // &::after {
     //   content: '';
