경세 fix : 로딩 변경 및 카운팅 변경

--- a/src/styles/EvaluationBegin.scss
+++ b/src/styles/EvaluationBegin.scss
@@ -18,6 +18,15 @@
   align-items: center;
   justify-content: center;
 
+  &:disabled {
+    &::before {
+      width: 100%;
+      border: none;
+      border-bottom: 1px solid;
+      border-color: #2c3a00;
+    }
+  }
+
   &::before {
     content: '';
     position: absolute;
