--- a/src/components/evaluation/EvaluationResultsComp.scss
+++ b/src/components/evaluation/EvaluationResultsComp.scss
@@ -4,13 +4,13 @@
   align-items: center;
   justify-content: center;
   button {
-    &.rate-again {
-      background: #383838;
-      color: #f1f1f1;
-      &::before {
-        border: 1px solid #383838;
-      }
-    } //rate-again--END--
+    // &.rate-again {
+    //   background: #383838;
+    //   color: #f1f1f1;
+    //   &::before {
+    //     border: 1px solid #383838;
+    //   }
+    // } //rate-again--END--
     position: relative;
     z-index: 1;
     width: 180px;
