--- a/src/components/unit/EvaluationListItem.scss
+++ b/src/components/unit/EvaluationListItem.scss
@@ -238,3 +238,57 @@
     } //details-btn--END--
   } //unit-component-evaluation-list-item__details-number--END--
 } //unit-component-evaluation-list-item--END--
+
+@media screen and (max-width: 1500px) {
+  .unit-component-evaluation-list-item {
+    .unit-component-evaluation-list-item__details-number {
+      justify-content: end;
+      width: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .unit-component-evaluation-list-item {
+    .unit-component-evaluation-list-item__title {
+      dt {
+        text-align: left;
+        width: 200px;
+        display: -webkit-box;
+        -webkit-line-clamp: 1; /* 줄 수 설정 */
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+    .unit-component-evaluation-list-item__thought {
+      .unit-component-evaluation-list-item__thought__txt {
+        width: 300px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .unit-component-evaluation-list-item {
+    flex-direction: column;
+    align-items: start;
+    .unit-component-evaluation-list-item__title {
+      width: auto;
+      dt {
+        text-align: left;
+        width: 100%;
+        display: -webkit-box;
+        -webkit-line-clamp: 1; /* 줄 수 설정 */
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+    .unit-component-evaluation-list-item__thought {
+      .unit-component-evaluation-list-item__thought__txt {
+        width: 100%;
+      }
+    }
+  }
+}
