경세 feat : service로 평가 컨트롤

--- a/src/components/AdvancedCommentComponent.scss
+++ b/src/components/AdvancedCommentComponent.scss
@@ -146,6 +146,8 @@
   font-style: normal;
   line-height: normal;
   letter-spacing: 0.72px;
+  // margin-left: 20px;
+  // margin-top: 20px;
   margin-bottom: 16px;
   position: relative;
   display: inline-block;
