--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -142,26 +142,46 @@
         gap: 8px;
         padding: 8px;
         border-radius: 12px 4px 12px 12px;
-        background: #00ffb3;
+        background: #242424;
         margin-bottom: 10px;
         .menu__box__my-page__level {
+          margin-top: 4px;
+          &.active{
+            .menu__box__my-page__info__bottom{
+              opacity: 0;
+            }
+          }
+          .menu__box__my-page__level__arr-btn{
+            margin-left: auto;
+            width: 26px;
+            height: 26px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s;
+            img{
+              width: 26px !important;
+              height: 26px !important;
+              object-fit: cover;
+            }
+          }//menu__box__my-page__level__arr-btn--END--
           // flex: 52px;
           width: 100%;
           height: 30px;
-          padding: 0 8px;
+          // padding: 0 8px;
           flex-shrink: 0;
-          border-radius: 4px;
-          border: 1.5px solid #565656;
-          background: linear-gradient(91deg, #565656 0.18%, #262626 45.72%, #3f3f3f 91.26%);
+          // border-radius: 4px;
+          // border: 1.5px solid #565656;
+          // background: linear-gradient(91deg, #565656 0.18%, #262626 45.72%, #3f3f3f 91.26%);
           display: flex;
           // flex-direction: column;
           align-items: center;
-          justify-content: center;
+          justify-content: start;
           gap: 4px;
           .grade {
             color: #f1f1f1;
             font-family: Inter500;
-            font-size: 8px;
+            font-size: 12px;
           }
           .level {
             color: var(--Text-music-sub, #aaa);
@@ -169,7 +189,6 @@
             font-size: 12px;
             font-style: normal;
             line-height: 100%; /* 12px */
-            letter-spacing: 0.36px;
           }
         } //menu__box__my-page__level--END--
         .menu__box__my-page__info {
@@ -177,6 +196,23 @@
           display: flex;
           flex-direction: column;
           gap: 8px;
+          &.active{
+            .menu__box__my-page__info__bottom{
+              height: 136px;
+              transition: 0.3s;
+              opacity: 1;
+              margin-top: 0px;
+            }
+            .menu__box__my-page__level__arr-btn{
+              transform: rotate(180deg);
+            }//menu__box__my-page__level__arr-btn--END--
+          }
+          .menu__box__my-page__info__bottom{
+            height: 0;
+            transition: 0.3s;
+            opacity: 0;
+            margin-top: -8px;
+          }
           .menu__box__my-page__info__top {
             display: flex;
             gap: 8px;
@@ -193,7 +229,7 @@
             .menu__box__my-page__info__top__txt {
               width: 100%;
               dt {
-                color: #1a1a1a;
+                color: #fff;
                 font-family: Inter500;
                 font-size: 14px;
                 font-style: normal;
@@ -202,14 +238,14 @@
                 justify-content: space-between;
               }
               dd {
-                color: #1a1a1a;
+                color: #fff;
                 font-family: Inter400;
-                font-size: 14px;
+                font-size: 12px;
                 font-style: normal;
               }
               img {
-                width: 16px;
-                height: 16px;
+                width: 20px;
+                height: 20px;
               }
             } //menu__box__my-page__info__top__txt--END--
           } //menu__box__my-page__info__top--END--
