상훈 feat: AlarmModal 컴포넌트 추가 및 스타일 수정

--- a/src/components/AlarmModal.scss
+++ b/src/components/AlarmModal.scss
@@ -3,13 +3,14 @@
   height: 26px;
   padding: 4px;
   border-radius: 4px;
-  background: url("../assets/images/alarm.png") center no-repeat #cf0;
+  background: url('../assets/images/alarm.png') center no-repeat #cf0;
   background-size: 20px 20px;
   position: fixed;
   right: -30px;
   bottom: 70px;
   cursor: pointer;
   transition: 0.3s;
+  z-index: 11;
   &.active {
     right: 16px;
   }
