--- a/src/components/GlobalAudioPlayer.scss
+++ b/src/components/GlobalAudioPlayer.scss
@@ -1,9 +1,10 @@
 .rm-audio-player-provider {
   position: fixed;
   left: 0;
-  bottom: 0;
-  z-index: 10;
+  top: 0;
+  z-index: 1000;
   width: 100%;
+  height: 100px;
   .track-info-container {
     width: auto !important;
   }
