--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -218,7 +218,7 @@
 
     .album__content-list__list__item__right__evaluation-score {
       text-align: left;
-      color: #ffd700;
+      color: #cf0;
       font-family: Inter600;
       font-size: 14px;
     }
@@ -305,26 +305,4 @@
       }
     }
   }
-}
-
-.album__content-list__list__item__right__critic {
-  display: flex;
-  justify-content: space-between;
-  img {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-  }
-  p {
-    color: #565656;
-    font-family: Inter400;
-    font-size: 10px;
-  }
-}
-
-.album__content-list__list__item__right__evaluation-score {
-  text-align: left;
-  color: #ffd700;
-  font-family: Inter600;
-  font-size: 14px;
 }
