--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -1,4 +1,48 @@
 .main__header {
+  .rhap_progress-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
+  .rhap_stacked {
+    .rhap_progress-section {
+      .rhap_time {
+        gap: 8px;
+        width: auto;
+      }
+      .rhap_current-time {
+        overflow: hidden;
+        color: #f1f1f1 !important;
+        text-overflow: ellipsis;
+        font-family: Pretendard700;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 100%; /* 14px */
+      }
+      .rhap_current-time::after {
+        content: '|';
+        margin-left: 8px;
+      }
+      .rhap_total-time {
+        margin-left: 8px;
+        overflow: hidden;
+        color: #949494 !important;
+        text-overflow: ellipsis;
+        font-family: Pretendard400;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 100%; /* 14px */
+      }
+    }
+    .rhap_controls-section {
+      .rhap_main-controls {
+        .rhap_main-controls-button {
+        }
+      }
+    }
+  }
   .main__header--mobile-title {
     display: none;
   }
@@ -11,17 +55,13 @@
   position: fixed;
   bottom: 0;
   right: 16px;
-  // left: 50%;
-  // transform: translate(-50%, 0%);
-  // max-width: 960px;
-  // width: calc(100% - 278px);
   width: 100%;
-  height: 156px;
+  height: 140px;
+  padding: 20px 30px;
   z-index: 10;
   border-radius: 16px;
   border: 1px solid #222;
   background: #1a1a1a;
-  padding: 16px 32px;
   transition: 0.6s;
   overflow: hidden;
   &.active {
@@ -154,7 +194,7 @@
     .main__header__cover-info__btn {
       width: 100%;
       height: 24px;
-      background: #cf0;
+      background: #fff;
       position: relative;
       top: 0;
       transition: 0.2s;
@@ -176,7 +216,7 @@
         transition: 0.2s;
         border-radius: 8px;
         height: 23px;
-        border: 1px solid #cf0;
+        border: 1px solid #fff;
       }
       &:hover {
         top: 4px;
@@ -229,11 +269,11 @@
   }
   .rhap_progress-indicator {
     width: 10px;
-    background: #cf0;
+    background: #fff;
   }
   .rhap_volume-indicator {
     width: 6px;
-    background: #cf0;
+    background: #fff;
   }
   .rhap_main-controls {
     margin-top: 0px;
@@ -243,7 +283,7 @@
     }
   }
   .rhap_progress-filled {
-    background: #cf0 !important;
+    background: #fff !important;
   } //.rhap_progress-filled--END--
 
   .rhap_button-clear {
